--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <h2>Computer Choice:<span id="computer-choice"></span></h2>
-    <h2>Your Choice:<span id="user-choice"></span></h2>
-    <h2>Result:<span id="result"></span></h2>
+    <h2>Computer Choice: <span id="computer-choice"></span></h2>
+    <h2>Your Choice: <span id="user-choice"></span></h2>
+    <h2>Result: <span id="result"></span></h2>
 
     <button id="rock">rock</button>
     <button id="paper">paper</button>
